<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/mower" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/forwardBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/forward"
            android:width="100dp" />

        <Button
            android:id="@+id/leftBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forwardBtn"
            android:layout_toLeftOf="@+id/forwardBtn"
            android:text="@string/left"
            android:width="100dp" />

        <Button
            android:id="@+id/stopBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/leftBtn"
            android:layout_alignBottom="@+id/leftBtn"
            android:layout_toRightOf="@+id/leftBtn"
            android:text="@string/stop"
            android:width="100dp" />

        <Button
            android:id="@+id/rightBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forwardBtn"
            android:layout_toRightOf="@+id/forwardBtn"
            android:text="@string/right"
            android:width="100dp" />

        <Button
            android:id="@+id/reverseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/leftBtn"
            android:layout_toRightOf="@+id/leftBtn"
            android:text="@string/reverse"
            android:width="100dp" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/cutter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/decrementCutterBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed_down"
            android:width="130dp" />

        <Button
            android:id="@+id/incrementCutterBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed_up"
            android:width="130dp" />

    </LinearLayout>

</LinearLayout>