<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp" >

        <Button
            android:id="@+id/startFSM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start_mower"/>

        <Button
            android:id="@+id/stopFSM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stop_mower"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/log" />

    <LinearLayout
        android:id="@+id/log"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp" 
        android:orientation="vertical">
	
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" 
	            android:text="BWF Right: "/>
	        <TextView
	            android:id="@+id/bwfRight"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" 
	            android:text="2"/>
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" 
	            android:text="BWF Left: "/>
	        <TextView
	            android:id="@+id/bwfLeft"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" 
	            android:text="2"/>
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" 
	            android:text="Range Right: "/>
	        <TextView
	            android:id="@+id/rangeRight"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" 
	            android:text="2"/>
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" 
	            android:text="Range Left: "/>
	        <TextView
	            android:id="@+id/rangeLeft"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" 
	            android:text="2"/>
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" 
	            android:text="Current state: "/>
	        <TextView
	            android:id="@+id/currentState"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" 
	            android:text="2"/>
        </LinearLayout>
        
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

</LinearLayout>